# FactoryGameConcept

./: CMakeCache.txt  CMakeLists.txt  CapsuleColiderExample.cpp  FactoryGameConcept  Makefile  NewMAke  README.md  Thoughts.md  cmake_install.cmake  game.c  game.cpp  game2.c  main.c  out
blog/: 001.MD  002.md  003.md  004.md  005.md
src/: game.cpp
src/Common/: camera.cpp  constants.hpp  grid.cpp  grid.h
src/Common/pathfinding/: Pathfinder.cpp  Pathfinder.h  a_*.MD
src/Controllers/: capsule.cpp  capsule.h
src/Entities/NPC/: unit.cpp
src/Entities/Player/: player.cpp
src/Scenes/World/: world.cpp  world.h
